--- a/DecorateArma/Decorate/Decorate/Decorate.vcxproj
+++ b/DecorateArma/Decorate/Decorate/Decorate.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Object\Enemy\EnemyManager.cpp" />
     <ClCompile Include="Object\Enemy\EnemyBase.cpp" />
     <ClCompile Include="Object\Field.cpp" />
     <ClCompile Include="Object\Player\Shot.cpp" />
@@ -166,6 +167,7 @@
     <ClCompile Include="Shader\SetVertexShader.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Object\Enemy\EnemyManager.h" />
     <ClInclude Include="Object\Enemy\EnemyBase.h" />
     <ClInclude Include="Object\Field.h" />
     <ClInclude Include="Object\Player\Shot.h" />
