--- a/DecorateArma/Decorate/Decorate/Decorate.vcxproj
+++ b/DecorateArma/Decorate/Decorate/Decorate.vcxproj
@@ -139,10 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Object\Enemy\EnemyManager.cpp" />
+    <ClCompile Include="Object\Enemy\EnemyRobot.cpp" />
     <ClCompile Include="Object\Enemy\EnemyBase.cpp" />
     <ClCompile Include="Object\Field.cpp" />
     <ClCompile Include="Object\Player\Shot.cpp" />
+    <ClCompile Include="Common\Spawn.cpp" />
     <ClCompile Include="Utility\Collision.cpp" />
     <ClCompile Include="Utility\Capsule.cpp" />
     <ClCompile Include="Common\CsvLoad.cpp" />
@@ -167,10 +168,11 @@
     <ClCompile Include="Shader\SetVertexShader.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Object\Enemy\EnemyManager.h" />
+    <ClInclude Include="Object\Enemy\EnemyRobot.h" />
     <ClInclude Include="Object\Enemy\EnemyBase.h" />
     <ClInclude Include="Object\Field.h" />
     <ClInclude Include="Object\Player\Shot.h" />
+    <ClInclude Include="Common\Spawn.h" />
     <ClInclude Include="Utility\Collision.h" />
     <ClInclude Include="Utility\Capsule.h" />
     <ClInclude Include="Common\CsvLoad.h" />
