--- a/DecorateArma/Decorate/Decorate/Decorate.vcxproj.filters
+++ b/DecorateArma/Decorate/Decorate/Decorate.vcxproj.filters
@@ -144,6 +144,9 @@
     <ClCompile Include="Common\Spawn.cpp">
       <Filter>ソース ファイル\Common</Filter>
     </ClCompile>
+    <ClCompile Include="Object\Enemy\EShot.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Utility\Game.h">
@@ -229,6 +232,9 @@
     </ClInclude>
     <ClInclude Include="Common\Spawn.h">
       <Filter>ヘッダー ファイル\Common</Filter>
+    </ClInclude>
+    <ClInclude Include="Object\Enemy\EShot.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
