プレイヤーHPバー追加

--- a/DecorateArma/Decorate/Decorate/Decorate.vcxproj
+++ b/DecorateArma/Decorate/Decorate/Decorate.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="UI\HpBar\HpBarPlayer.cpp" />
     <ClCompile Include="UI\HpBar\HpBarEnemy.cpp" />
     <ClCompile Include="UI\HpBar\HpBarBase.cpp" />
     <ClCompile Include="Object\Enemy\EShot.cpp" />
@@ -171,6 +172,7 @@
     <ClCompile Include="Shader\SetVertexShader.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="UI\HpBar\HpBarPlayer.h" />
     <ClInclude Include="UI\HpBar\HpBarEnemy.h" />
     <ClInclude Include="UI\HpBar\HpBarBase.h" />
     <ClInclude Include="Object\Enemy\EShot.h" />
