--- a/DecorateArma/Decorate/Decorate/Decorate.vcxproj.filters
+++ b/DecorateArma/Decorate/Decorate/Decorate.vcxproj.filters
@@ -168,6 +168,12 @@
     <ClCompile Include="UI\HpBar\HpBarPlayer.cpp">
       <Filter>ソース ファイル\UI\HpBar</Filter>
     </ClCompile>
+    <ClCompile Include="Scene\SceneGear.cpp">
+      <Filter>ソース ファイル\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="Object\Player\Gear.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Utility\Game.h">
@@ -265,6 +271,12 @@
     </ClInclude>
     <ClInclude Include="UI\HpBar\HpBarPlayer.h">
       <Filter>ヘッダー ファイル\UI\HpBar</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene\SceneGear.h">
+      <Filter>ヘッダー ファイル\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="Object\Player\Gear.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
