--- a/DecorateArma/Decorate/Decorate/Decorate.vcxproj
+++ b/DecorateArma/Decorate/Decorate/Decorate.vcxproj
@@ -156,6 +156,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Object\Player\Gear.cpp" />
+    <ClCompile Include="Scene\SceneSelect.cpp" />
     <ClCompile Include="Scene\SceneGear.cpp" />
     <ClCompile Include="UI\HpBar\HpBarPlayer.cpp" />
     <ClCompile Include="UI\HpBar\HpBarEnemy.cpp" />
@@ -191,6 +192,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Object\Player\Gear.h" />
+    <ClInclude Include="Scene\SceneSelect.h" />
     <ClInclude Include="Scene\SceneGear.h" />
     <ClInclude Include="UI\HpBar\HpBarPlayer.h" />
     <ClInclude Include="UI\HpBar\HpBarEnemy.h" />
