--- a/DecorateArma/Decorate/Decorate/Decorate.vcxproj
+++ b/DecorateArma/Decorate/Decorate/Decorate.vcxproj
@@ -159,6 +159,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Object\Enemy\EnemyPlant.cpp" />
     <ClCompile Include="Object\Player\Gear.cpp" />
     <ClCompile Include="Object\RecoveryItem.cpp" />
     <ClCompile Include="Scene\SceneSelect.cpp" />
@@ -196,6 +197,7 @@
     <ClCompile Include="Shader\SetVertexShader.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Object\Enemy\EnemyPlant.h" />
     <ClInclude Include="Object\Player\Gear.h" />
     <ClInclude Include="Object\RecoveryItem.h" />
     <ClInclude Include="Scene\SceneSelect.h" />
