--- a/DecorateArma/Decorate/Decorate/Decorate.vcxproj.filters
+++ b/DecorateArma/Decorate/Decorate/Decorate.vcxproj.filters
@@ -171,14 +171,17 @@
     <ClCompile Include="Scene\SceneGear.cpp">
       <Filter>ソース ファイル\Scene</Filter>
     </ClCompile>
-    <ClCompile Include="Object\Player\Gear.cpp">
-      <Filter>ソース ファイル</Filter>
+    <ClCompile Include="Object\Enemy\EnemyPlant.cpp">
+      <Filter>ソース ファイル\Object\Enemy</Filter>
     </ClCompile>
-    <ClCompile Include="Scene\SceneSelect.cpp">
-      <Filter>ソース ファイル</Filter>
+    <ClCompile Include="Object\Player\Gear.cpp">
+      <Filter>ソース ファイル\Object\Player</Filter>
     </ClCompile>
     <ClCompile Include="Object\RecoveryItem.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>ソース ファイル\Object</Filter>
+    </ClCompile>
+    <ClCompile Include="Scene\SceneSelect.cpp">
+      <Filter>ソース ファイル\Scene</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -281,14 +284,17 @@
     <ClInclude Include="Scene\SceneGear.h">
       <Filter>ヘッダー ファイル\Scene</Filter>
     </ClInclude>
-    <ClInclude Include="Object\Player\Gear.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="Scene\SceneSelect.h">
-      <Filter>ヘッダー ファイル</Filter>
+      <Filter>ヘッダー ファイル\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="Object\Enemy\EnemyPlant.h">
+      <Filter>ヘッダー ファイル\Object\Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="Object\Player\Gear.h">
+      <Filter>ヘッダー ファイル\Object\Player</Filter>
     </ClInclude>
     <ClInclude Include="Object\RecoveryItem.h">
-      <Filter>ヘッダー ファイル</Filter>
+      <Filter>ヘッダー ファイル\Object</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
